dsl/src/main/java/pieker/dsl/antlr/gen/PiekerParser.java
// Generated from H:/Uni/Master/Semester-5/Pieker/dsl/src/main/java/pieker/dsl/antlr/grammar/PiekerParser.g4 by ANTLR 4.13.2
package pieker.dsl.antlr.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PiekerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FEATURE_COMMENT=1, FEATURE=2, BACKGROUND=3, SCENARIO=4, BEFORE_EACH=5, 
		STEP=6, DEF=7, GIVEN=8, LINK=9, REQUEST=10, SQL=11, PASSIVE=12, SERVICE=13, 
		URL=14, DATABASE=15, WHEN=16, AFTER=17, RETRY=18, TIMES=19, DELAY=20, 
		DROPOUT=21, TIMEOUT=22, THEN=23, LOG_ALL=24, ASSERT=25, ASSERT_AFTER=26, 
		DATABASE_BLOCK=27, TRAFFIC_BLOCK=28, ARGUMENTS=29, BOOL=30, EQUALS=31, 
		NULL=32, STATUS=33, TIME=34, AMOUNT=35, CONTENT=36, COMMENT=37, TABLE_ROW=38, 
		DOC_STRING=39, CHAR=40, NEWLINE=41;
	public static final int
		RULE_feature = 0, RULE_featureHeader = 1, RULE_background = 2, RULE_globalScope = 3, 
		RULE_scenario = 4, RULE_scenarioScope = 5, RULE_given = 6, RULE_givenCondition = 7, 
		RULE_givenKey = 8, RULE_when = 9, RULE_whenCondition = 10, RULE_whenKey = 11, 
		RULE_then = 12, RULE_logAll = 13, RULE_assert = 14, RULE_assertAfter = 15, 
		RULE_assertBody = 16, RULE_arguments = 17, RULE_assertBool = 18, RULE_boolHeader = 19, 
		RULE_assertEquals = 20, RULE_equalsHeader = 21, RULE_assertNull = 22, 
		RULE_nullHeader = 23, RULE_description = 24, RULE_step = 25, RULE_beforeEach = 26, 
		RULE_line = 27, RULE_table = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"feature", "featureHeader", "background", "globalScope", "scenario", 
			"scenarioScope", "given", "givenCondition", "givenKey", "when", "whenCondition", 
			"whenKey", "then", "logAll", "assert", "assertAfter", "assertBody", "arguments", 
			"assertBool", "boolHeader", "assertEquals", "equalsHeader", "assertNull", 
			"nullHeader", "description", "step", "beforeEach", "line", "table"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "'Given:'", null, null, 
			null, null, null, null, null, "'When:'", null, null, null, null, null, 
			null, "'Then:'", null, "'Assert:'", "'After:'", "'Database:'", "'Traffic:'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "FEATURE_COMMENT", "FEATURE", "BACKGROUND", "SCENARIO", "BEFORE_EACH", 
			"STEP", "DEF", "GIVEN", "LINK", "REQUEST", "SQL", "PASSIVE", "SERVICE", 
			"URL", "DATABASE", "WHEN", "AFTER", "RETRY", "TIMES", "DELAY", "DROPOUT", 
			"TIMEOUT", "THEN", "LOG_ALL", "ASSERT", "ASSERT_AFTER", "DATABASE_BLOCK", 
			"TRAFFIC_BLOCK", "ARGUMENTS", "BOOL", "EQUALS", "NULL", "STATUS", "TIME", 
			"AMOUNT", "CONTENT", "COMMENT", "TABLE_ROW", "DOC_STRING", "CHAR", "NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PiekerParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PiekerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FeatureContext extends ParserRuleContext {
		public FeatureHeaderContext featureHeader() {
			return getRuleContext(FeatureHeaderContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PiekerParser.EOF, 0); }
		public BackgroundContext background() {
			return getRuleContext(BackgroundContext.class,0);
		}
		public List<ScenarioContext> scenario() {
			return getRuleContexts(ScenarioContext.class);
		}
		public ScenarioContext scenario(int i) {
			return getRuleContext(ScenarioContext.class,i);
		}
		public TerminalNode NEWLINE() { return getToken(PiekerParser.NEWLINE, 0); }
		public FeatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_feature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PiekerParserListener ) ((PiekerParserListener)listener).enterFeature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PiekerParserListener ) ((PiekerParserListener)listener).exitFeature(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PiekerParserVisitor ) return ((PiekerParserVisitor<? extends T>)visitor).visitFeature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FeatureContext feature() throws RecognitionException {
		FeatureContext _localctx = new FeatureContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_feature);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			featureHeader();
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==BACKGROUND) {
				{
				setState(59);
				background();
				}
			}

			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SCENARIO) {
				{
				{
				setState(62);
				scenario();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(68);
				match(NEWLINE);
				}
			}

			setState(71);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FeatureHeaderContext extends ParserRuleContext {
		public TerminalNode FEATURE() { return getToken(PiekerParser.FEATURE, 0); }
		public LineContext line() {
			return getRuleContext(LineContext.class,0);
		}
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(PiekerParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(PiekerParser.NEWLINE, i);
		}
		public FeatureHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_featureHeader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PiekerParserListener ) ((PiekerParserListener)listener).enterFeatureHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PiekerParserListener ) ((PiekerParserListener)listener).exitFeatureHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PiekerParserVisitor ) return ((PiekerParserVisitor<? extends T>)visitor).visitFeatureHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FeatureHeaderContext featureHeader() throws RecognitionException {
		FeatureHeaderContext _localctx = new FeatureHeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_featureHeader);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(FEATURE);
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CHAR) {
				{
				setState(74);
				line();
				setState(76);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(75);
					match(NEWLINE);
					}
					break;
				}
				}
			}

			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOC_STRING) {
				{
				setState(80);
				description();
				}
			}

			setState(84);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(83);
				match(NEWLINE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BackgroundContext extends ParserRuleContext {
		public TerminalNode BACKGROUND() { return getToken(PiekerParser.BACKGROUND, 0); }
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(PiekerParser.NEWLINE, 0); }
		public GlobalScopeContext globalScope() {
			return getRuleContext(GlobalScopeContext.class,0);
		}
		public BackgroundContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_background; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PiekerParserListener ) ((PiekerParserListener)listener).enterBackground(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PiekerParserListener ) ((PiekerParserListener)listener).exitBackground(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PiekerParserVisitor ) return ((PiekerParserVisitor<? extends T>)visitor).visitBackground(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BackgroundContext background() throws RecognitionException {
		BackgroundContext _localctx = new BackgroundContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_background);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(BACKGROUND);
			setState(89);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DOC_STRING:
				{
				setState(87);
				description();
				}
				break;
			case NEWLINE:
				{
				setState(88);
				match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DEF) {
				{
				setState(91);
				globalScope();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalScopeContext extends ParserRuleContext {
		public List<TerminalNode> DEF() { return getTokens(PiekerParser.DEF); }
		public TerminalNode DEF(int i) {
			return getToken(PiekerParser.DEF, i);
		}
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(PiekerParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(PiekerParser.NEWLINE, i);
		}
		public GlobalScopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalScope; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PiekerParserListener ) ((PiekerParserListener)listener).enterGlobalScope(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PiekerParserListener ) ((PiekerParserListener)listener).exitGlobalScope(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PiekerParserVisitor ) return ((PiekerParserVisitor<? extends T>)visitor).visitGlobalScope(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalScopeContext globalScope() throws RecognitionException {
		GlobalScopeContext _localctx = new GlobalScopeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_globalScope);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(94);
				match(DEF);
				setState(95);
				line();
				setState(96);
				match(NEWLINE);
				}
				}
				setState(100); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DEF );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScenarioContext extends ParserRuleContext {
		public TerminalNode SCENARIO() { return getToken(PiekerParser.SCENARIO, 0); }
		public LineContext line() {
			return getRuleContext(LineContext.class,0);
		}
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(PiekerParser.NEWLINE, 0); }
		public ScenarioScopeContext scenarioScope() {
			return getRuleContext(ScenarioScopeContext.class,0);
		}
		public BeforeEachContext beforeEach() {
			return getRuleContext(BeforeEachContext.class,0);
		}
		public List<StepContext> step() {
			return getRuleContexts(StepContext.class);
		}
		public StepContext step(int i) {
			return getRuleContext(StepContext.class,i);
		}
		public ScenarioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scenario; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PiekerParserListener ) ((PiekerParserListener)listener).enterScenario(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PiekerParserListener ) ((PiekerParserListener)listener).exitScenario(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PiekerParserVisitor ) return ((PiekerParserVisitor<? extends T>)visitor).visitScenario(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScenarioContext scenario() throws RecognitionException {
		ScenarioContext _localctx = new ScenarioContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_scenario);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(SCENARIO);
			setState(103);
			line();
			setState(106);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DOC_STRING:
				{
				setState(104);
				description();
				}
				break;
			case NEWLINE:
				{
				setState(105);
				match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DEF) {
				{
				setState(108);
				scenarioScope();
				}
			}

			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==BEFORE_EACH) {
				{
				setState(111);
				beforeEach();
				}
			}

			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STEP) {
				{
				{
				setState(114);
				step();
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScenarioScopeContext extends ParserRuleContext {
		public List<TerminalNode> DEF() { return getTokens(PiekerParser.DEF); }
		public TerminalNode DEF(int i) {
			return getToken(PiekerParser.DEF, i);
		}
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(PiekerParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(PiekerParser.NEWLINE, i);
		}
		public ScenarioScopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scenarioScope; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PiekerParserListener ) ((PiekerParserListener)listener).enterScenarioScope(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PiekerParserListener ) ((PiekerParserListener)listener).exitScenarioScope(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PiekerParserVisitor ) return ((PiekerParserVisitor<? extends T>)visitor).visitScenarioScope(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScenarioScopeContext scenarioScope() throws RecognitionException {
		ScenarioScopeContext _localctx = new ScenarioScopeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_scenarioScope);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(120);
				match(DEF);
				setState(121);
				line();
				setState(122);
				match(NEWLINE);
				}
				}
				setState(126); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DEF );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GivenContext extends ParserRuleContext {
		public TerminalNode GIVEN() { return getToken(PiekerParser.GIVEN, 0); }
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(PiekerParser.NEWLINE, 0); }
		public List<GivenConditionContext> givenCondition() {
			return getRuleContexts(GivenConditionContext.class);
		}
		public GivenConditionContext givenCondition(int i) {
			return getRuleContext(GivenConditionContext.class,i);
		}
		public GivenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_given; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PiekerParserListener ) ((PiekerParserListener)listener).enterGiven(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PiekerParserListener ) ((PiekerParserListener)listener).exitGiven(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PiekerParserVisitor ) return ((PiekerParserVisitor<? extends T>)visitor).visitGiven(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GivenContext given() throws RecognitionException {
		GivenContext _localctx = new GivenContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_given);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(GIVEN);
			setState(131);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DOC_STRING:
				{
				setState(129);
				description();
				}
				break;
			case NEWLINE:
				{
				setState(130);
				match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(134); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(133);
				givenCondition();
				}
				}
				setState(136); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 65024L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GivenConditionContext extends ParserRuleContext {
		public GivenKeyContext givenKey() {
			return getRuleContext(GivenKeyContext.class,0);
		}
		public LineContext line() {
			return getRuleContext(LineContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(PiekerParser.NEWLINE, 0); }
		public GivenConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_givenCondition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PiekerParserListener ) ((PiekerParserListener)listener).enterGivenCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PiekerParserListener ) ((PiekerParserListener)listener).exitGivenCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PiekerParserVisitor ) return ((PiekerParserVisitor<? extends T>)visitor).visitGivenCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GivenConditionContext givenCondition() throws RecognitionException {
		GivenConditionContext _localctx = new GivenConditionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_givenCondition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			givenKey();
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CHAR) {
				{
				setState(139);
				line();
				}
			}

			setState(143);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				{
				setState(142);
				match(NEWLINE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GivenKeyContext extends ParserRuleContext {
		public TerminalNode REQUEST() { return getToken(PiekerParser.REQUEST, 0); }
		public TerminalNode PASSIVE() { return getToken(PiekerParser.PASSIVE, 0); }
		public TerminalNode SQL() { return getToken(PiekerParser.SQL, 0); }
		public TerminalNode URL() { return getToken(PiekerParser.URL, 0); }
		public TerminalNode LINK() { return getToken(PiekerParser.LINK, 0); }
		public TerminalNode SERVICE() { return getToken(PiekerParser.SERVICE, 0); }
		public TerminalNode DATABASE() { return getToken(PiekerParser.DATABASE, 0); }
		public GivenKeyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_givenKey; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PiekerParserListener ) ((PiekerParserListener)listener).enterGivenKey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PiekerParserListener ) ((PiekerParserListener)listener).exitGivenKey(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PiekerParserVisitor ) return ((PiekerParserVisitor<? extends T>)visitor).visitGivenKey(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GivenKeyContext givenKey() throws RecognitionException {
		GivenKeyContext _localctx = new GivenKeyContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_givenKey);
		int _la;
		try {
			setState(157);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,21,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PASSIVE) {
					{
					setState(145);
					match(PASSIVE);
					}
				}

				setState(148);
				match(REQUEST);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PASSIVE) {
					{
					setState(149);
					match(PASSIVE);
					}
				}

				setState(152);
				match(SQL);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(153);
				match(URL);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(154);
				match(LINK);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(155);
				match(SERVICE);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(156);
				match(DATABASE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhenContext extends ParserRuleContext {
		public TerminalNode WHEN() { return getToken(PiekerParser.WHEN, 0); }
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(PiekerParser.NEWLINE, 0); }
		public List<WhenConditionContext> whenCondition() {
			return getRuleContexts(WhenConditionContext.class);
		}
		public WhenConditionContext whenCondition(int i) {
			return getRuleContext(WhenConditionContext.class,i);
		}
		public WhenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_when; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PiekerParserListener ) ((PiekerParserListener)listener).enterWhen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PiekerParserListener ) ((PiekerParserListener)listener).exitWhen(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PiekerParserVisitor ) return ((PiekerParserVisitor<? extends T>)visitor).visitWhen(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhenContext when() throws RecognitionException {
		WhenContext _localctx = new WhenContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_when);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(WHEN);
			setState(162);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DOC_STRING:
				{
				setState(160);
				description();
				}
				break;
			case NEWLINE:
				{
				setState(161);
				match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(165); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(164);
				whenCondition();
				}
				}
				setState(167); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 8257664L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
